# vdeplug_agno

./: CMakeLists.txt  Makefile.am  README.md  TODO  configure.ac  libvdeplug_agno.1  libvdeplug_agno.c
man/: libvdeplug_agno.1  libvdeplug_agno.1.md  libvdeplug_agno.1.ronn
